[package]
name = "infuser"
version = "0.1.0"
edition = "2021"
authors = ["Logan Praneis <lpraneis@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.21", features = ["derive"]}
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tokio = { version= "1.21.1", features = ["net", "rt", "macros", "io-std", "io-util" , "fs"] }
